[tool.poetry]
name = "3dprint-price-estimator"
version = "0.1.0"
description = ""
authors = ["Florian"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
python-multipart = "^0.0.11"
aiofiles = "^24.1.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
